Move pages to folders for pretty URLs, update nav, JS, and paths

--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About – Michelle Pavlova</title>
-	<link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
+	<link rel="icon" type="image/svg+xml" href="../favicon.svg">
+    <link rel="stylesheet" href="../styles/reset.css" />
+    <link rel="stylesheet" href="../styles/style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   </head>
 
@@ -14,16 +14,16 @@
     <!-- Header -->
     <header class="site-header">
 		<div class="container">
-			<a href="index.html" class="logo">Michelle Pavlova</a>
+			<a href="/" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="#selected-work">Work</a></li>
-					<li><a href="about.html" class="active">About</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="../#selected-work">Work</a></li>
+					<li><a href="/about/" class="active">About</a></li>
 					<li>
-						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
+						<a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
 							Resume
-							<img src="./assets/icons/external-link.svg" alt="" class="icon" />
+							<img src="../assets/icons/external-link.svg" alt="" class="icon" />
 						</a>
 					</li>
 				</ul>
@@ -56,13 +56,13 @@
 		</button>
 		<nav class="mobile-menu__nav">
 			<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="index.html#selected-work">Work</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/#selected-work">Work</a></li>
+			<li><a href="/about/">About</a></li>
 			<li>
-				<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
+				<a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
 				Resume
-				<img src="./assets/icons/external-link.svg" alt="" class="icon" />
+				<img src="../assets/icons/external-link.svg" alt="" class="icon" />
 				</a>
 			</li>
 			</ul>
@@ -77,7 +77,7 @@
 			<div class="about-hero__image-block">
 				<img 
 					id="portrait"
-					src="./assets/images/portrait.jpg" 
+					src="../assets/images/portrait.jpg" 
 					alt="Portrait of Michelle Pavlova" 
 					class="about-hero__image"
 				/>
@@ -124,26 +124,26 @@
 							<strong>When I’m not designing</strong>, I’m usually 
 							<span class="hover-preview">
 								<span class="hover-preview__text">out walking</span>
-								<img src="./assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
+								<img src="../assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
 							</span> 
 							with a 
 							<span class="hover-preview">
 								<span class="hover-preview__text">matcha</span>
-								<img src="./assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
+								<img src="../assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
 							</span> 
 							(or hojicha, or chai…). I also love 
 							<span class="hover-preview">
 								<span class="hover-preview__text">thrifting</span>
-								<img src="./assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
+								<img src="../assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
 							</span>, 
 							<span class="hover-preview">
 								<span class="hover-preview__text">a plot-driven videogame</span>
-								<img src="./assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
+								<img src="../assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
 							</span>, 
 							and hanging out with my 
 							<span class="hover-preview">
 								<span class="hover-preview__text">very round British Shorthair</span>
-								<img src="./assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
+								<img src="../assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
 							</span>.
 						</p>
 
@@ -180,9 +180,9 @@
       <div class="site-footer__column">
         <h4 class="site-footer__heading">Navigation</h4>
         <ul class="site-footer__list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#selected-work">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#selected-work">Work</a></li>
+          <li><a href="/about/">About</a></li>
         </ul>
       </div>
 
@@ -192,13 +192,13 @@
           <li>
 						<a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
 							LinkedIn
-							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+							<img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         	<li>
-						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
+						<a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
 							Resume
-							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+							<img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         </ul>
@@ -207,7 +207,7 @@
 
   </div>
 </footer>
-<script src="./scripts/main.js" defer></script>
+<script src="../scripts/main.js" defer></script>
 
   </body>
 </html>
