--- a/case3/index.html
+++ b/case3/index.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Case Study – Coming Soon</title>
-	<link rel="icon" type="image/svg+xml" href="favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="../favicon.svg">
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
-  <link rel="stylesheet" href="./styles/reset.css" />
-  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="../styles/reset.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <a href="index.html" class="logo">Michelle Pavlova</a>
+      <a href="/" class="logo">Michelle Pavlova</a>
       <nav class="site-nav">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="#selected-work" class="active">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/about/">About</a></li>
           <li>
-            <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
+            <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
               Resume
-              <img src="./assets/icons/external-link.svg" alt="" class="icon" />
+              <img src="../assets/icons/external-link.svg" alt="" class="icon" />
             </a>
           </li>
         </ul>
@@ -51,13 +51,13 @@
     </button>
     <nav class="mobile-menu__nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#selected-work">Work</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="../">Home</a></li>
+        <li><a href="../#selected-work">Work</a></li>
+        <li><a href="/about/">About</a></li>
         <li>
-          <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
+          <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
             Resume
-            <img src="./assets/icons/external-link.svg" alt="" class="icon" />
+            <img src="../assets/icons/external-link.svg" alt="" class="icon" />
           </a>
         </li>
       </ul>
@@ -95,9 +95,9 @@
         <div class="site-footer__column">
           <h4 class="site-footer__heading">Navigation</h4>
           <ul class="site-footer__list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#selected-work">Work</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../">Home</a></li>
+            <li><a href="../#selected-work">Work</a></li>
+            <li><a href="/about/">About</a></li>
           </ul>
         </div>
         <div class="site-footer__column">
@@ -106,13 +106,13 @@
             <li>
               <a href="https://www.linkedin.com/in/michellepavlova/" target="_blank" rel="noopener">
                 LinkedIn
-                <img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+                <img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
               </a>
             </li>
             <li>
-              <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
+              <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener">
                 Resume
-                <img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
+                <img src="../assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
               </a>
             </li>
           </ul>
@@ -124,6 +124,6 @@
   <button id="backToTop" class="back-to-top" aria-label="Back to top">
     <svg viewBox="0 0 24 24" width="28" height="28"><path d="M12 19V5M5 12l7-7 7 7" stroke="white" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
   </button>
-  <script src="./scripts/main.js" defer></script>
+  <script src="../scripts/main.js" defer></script>
 </body>
 </html>
