--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       type="font/woff2"
       crossorigin
   >
-  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="../favicon.svg">
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css">
 	<link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
@@ -18,12 +18,12 @@
 <body>
   <header class="site-header">
 		<div class="container">
-			<a href="index.html" class="logo">Michelle Pavlova</a>
+			<a href="/" class="logo">Michelle Pavlova</a>
 			<nav class="site-nav">
 				<ul>
-					<li><a href="index.html" class="active">Home</a></li>
+					<li><a href="/" class="active">Home</a></li>
 					<li><a href="#selected-work">Work</a></li>
-					<li><a href="about.html">About</a></li>
+					<li><a href="/about/">About</a></li>
 					<li>
 						<a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer">
 							Resume
@@ -59,9 +59,9 @@
     </button>
     <nav class="mobile-menu__nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#selected-work">Work</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/#selected-work">Work</a></li>
+        <li><a href="/about/">About</a></li>
         <li>
           <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer"  class="menu__link menu__link--resume">
             Resume
@@ -95,7 +95,7 @@
 	
 			<div class="hero__buttons">
 				<a href="#selected-work" class="button button--primary">See my work</a>
-				<a href="about.html" class="button button--secondary">About me</a>
+				<a href="/about/" class="button button--secondary">About me</a>
 			</div>
 		</div>
 	</div>
@@ -106,7 +106,7 @@
     <h2 class="selected-work__title">Selected Work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
-        <a href="case1.html" class="work-card__link" aria-label="Read more about Everwell case study: Streamlining pediatric ER triage"></a>
+        <a href="/case1/" class="work-card__link" aria-label="Read more about Everwell case study: Streamlining pediatric ER triage"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
         </span>
@@ -129,7 +129,7 @@
       </article>
 
 			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
-        <a href="case2.html" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
+        <a href="/case2/" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
         </span>
@@ -190,9 +190,9 @@
       <div class="site-footer__column">
         <h4 class="site-footer__heading">Navigation</h4>
         <ul class="site-footer__list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="index.html#selected-work">Work</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/#selected-work">Work</a></li>
+          <li><a href="/about/">About</a></li>
         </ul>
       </div>
 
