Fix the bug with a resume icon in case2 in mobilуб fix work link in case2 mobile

--- a/case2/index.html
+++ b/case2/index.html
@@ -56,9 +56,9 @@
         <li><a href="../#selected-work">Work</a></li>
         <li><a href="/about/">About</a></li>
         <li>
-          <a href="./assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
+          <a href="../assets/docs/Michelle_Pavlova_Resume_2025.pdf" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
             Resume
-            <img src="./assets/icons/external-link.svg" alt="" class="icon" />
+            <img src="../assets/icons/external-link.svg" alt="" class="icon" />
           </a>
         </li>
       </ul>
