Change the name in case1

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
     <h2 class="selected-work__title">Selected Work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
-        <a href="/case1/" class="work-card__link" aria-label="Read more about Everwell case study: Streamlining pediatric ER triage"></a>
+        <a href="/case1/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
         </span>
 
         <div class="work-card-upper">
-          <h3 id="work1-title" class="work-card__title">EVERWELL</h3>
+          <h3 id="work1-title" class="work-card__title">Horizon Children's Hospital</h3>
           <div class="work-card__text-block">
             <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
             <p class="work-card__description">
@@ -135,7 +135,7 @@
         </span>
 
         <div class="work-card-upper">
-            <h3 id="work2-title" class="work-card__title work-card__title--blue">EVERWELL</h3>
+            <h3 id="work2-title" class="work-card__title work-card__title--blue">Everwell</h3>
             <div class="work-card__text-block">
               <p class="work-card__subtitle">Redesigning a seniors' health app for clarity and engagement</p>
               <p class="work-card__description">
