--- a/case1/index.html
+++ b/case1/index.html
@@ -85,7 +85,7 @@
       <!-- Hero -->
       <section class="case-hero" aria-labelledby="case-hero-title">
         <div class="container case-hero__content">
-          <p class="case-hero__client">Everwell</p>
+          <p class="case-hero__client">Horizon Children's Hospital</p>
           <h1 class="case-hero__title" id="case-hero-title">
             Streamlining pediatric ER triage with<br />
             92% accuracy
