Change images in case1

--- a/case1/index.html
+++ b/case1/index.html
@@ -135,7 +135,7 @@
           <h2 id="case-image1-title" class="visually-hidden">Interface overview: triage workflow screen</h2>
           <figure class="case-image__wrapper">
             <img 
-              src="../assets/images/case1_2.jpg" 
+              src="../assets/images/Home-1.png" 
               alt="Interface overview of a pediatric ER triage screen with multiple symptom inputs and system decision"
               class="case-image__image"
             />
