Replace two more images

--- a/case1/index.html
+++ b/case1/index.html
@@ -569,11 +569,14 @@
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
                 <img 
-                  src="../assets/images/case1_desing_highlight4_2.png" 
+                  src="../assets/images/popover_v2.png" 
                   alt="Popovers for updating patient symptoms or adding a new patient, with clear headings and time information" 
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
               </div>
+              <!-- Fixing -->
+               
+              <!-- End of fixing columns -->
               <div class="twocol twocol--wide twocol--wide-mg40">
                 <h3 class="twocol__heading">Getting results</h3>
                 <div class="twocol__main">
