--- a/case1/index.html
+++ b/case1/index.html
@@ -480,12 +480,12 @@
             <article class="case-highlights__item">
               <div class="case-highlights__visual">
                 <img 
-                  src="../assets/images/Home_CHEO_1_1.png" 
+                  src="../assets/images/Home - mobile.png" 
                   alt="Homepage welcome screen with nurse and child illustration" 
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
                 <img 
-                  src="../assets/images/Modal_CHEO_1_2.png" 
+                  src="../assets/images/Wait times modal.png" 
                   alt="Wait time modal with bear illustration explaining expectations" 
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
@@ -507,12 +507,12 @@
             <article class="case-highlights__item">
               <div class="case-highlights__visual">
                 <img 
-                  src="../assets/images/Intro_2_1.png" 
+                  src="../assets/images/Intro screen.png" 
                   alt="Intro screen explaining the purpose of the screener with illustrated parent and child" 
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
                 <img 
-                  src="../assets/images/case1_desing_highlight2_2.png" 
+                  src="../assets/images/Exit modal.png" 
                   alt="Exit confirmation modal asking the user to confirm before leaving the screener" 
                   class="case-highlights__visual-image case-highlights__visual-image--narrow"
                 />
@@ -537,12 +537,12 @@
             <article class="case-highlights__item">
               <div class="case-highlights__visual">
                 <img 
-                  src="../assets/images/case1_desing_highlight3_1.png" 
+                  src="../assets/images/QNR - How old are you.png" 
                   alt="Screen showing patient age selection with a helper note explaining to fill the form as if you are the patient" 
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
                 <img 
-                  src="../assets/images/case1_desing_highlight3_2.png" 
+                  src="../assets/images/QNR - Is this for an injury.png" 
                   alt="Screen with injury-related question showing Yes and No radio buttons" 
                   class="case-highlights__visual-image case-highlights__visual-image--wide"
                 />
@@ -569,7 +569,7 @@
               <div class="case-highlights__visual">
                 <div class="case-highlights__visual-col case-highlights__visual-col--left">
                   <img
-                    src="../assets/images/case1_desing_highlight4_1.png"
+                    src="../assets/images/Results - 1 card.png"
                     alt="Results screen showing a summary card with instructions, patient status, and a button to update symptoms or add new patient"
                     class="case-highlights__visual-image case-highlights__visual-image--wide" />
                 </div>
@@ -593,7 +593,7 @@
                 
                     <!-- 2. Feature widget card -->
                     <!-- <div class="case-widget-card case-widget-card_no-background"> -->
-                      <img class="case-widget-card case-widget-card--no-padding case-widget-card_no-background" src="../assets/images/select_patient_700.png" alt="Image of a card showing the process of selecting patients" class="case-widget-card__feature-img" />
+                      <img class="case-widget-card case-widget-card--no-padding case-widget-card_no-background" src="../assets/images/Select patient dropdown.png" alt="Image of a card showing the process of selecting patients" class="case-widget-card__feature-img" />
                     <!-- </div> -->
 
                 </div>
@@ -620,7 +620,7 @@
             <article class="case-highlights__item">
               <div class="case-highlights__visual">
                 <img 
-                  src="../assets/images/case1_desing_highlight5_1.png" 
+                  src="../assets/images/Results - 3 card.png" 
                   alt="Scrollable results page showing multiple summary cards for different patients with age and navigation indicators" 
                   class="case-highlights__visual-image case-highlights__visual-image--900 case-highlights__visual-image--large"
                 />
