Chande text in Home page and line height in .hero__title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<p class="hero__greeting">Hi! I’m Michelle.</p>
 			<h1 class="hero__title">A Product Designer<br />& accessibility advocate.</h1>
 			<p class="hero__description">
-				Designing thoughtful experiences across consumer, B2B, and SaaS products. I thrive in fast-paced environments and bring a human-centred perspective to complex systems.
+				With experience across B2C, B2B, and SaaS projects and a visual media background, I bring a thoughtful approach based in equal mix of creativity and research and a can-do go-getter positive attitude.
 			</p>
 	
 			<div class="hero__info">
