Add a new design highlight in case2

--- a/case2/index.html
+++ b/case2/index.html
@@ -646,12 +646,33 @@
               <div class="twocol twocol--wide">
                 <h3 class="twocol__heading">Multi-profile support</h3>
                 <div class="twocol__main">
-                  <p>
+                  <p class="add-big-margin-bottom">
                     Some users were caregivers supporting loved ones. I designed the multi-profile system to allow quick profile switching, program enrollment per profile, and ownership transfer if a patient takes over their own care.
                   </p>
                 </div>
               </div>
             </article>
+            <!-- 🦊new card -->
+             <article class="case-highlights__item">
+
+              <div class="case-highlights__visual">
+                <div class="case-highlights__visual-col case-highlights__visual-col--left">
+                  <img
+                    src="../assets/images/ios.png"
+                    alt="an image of the ios on the phone"
+                    class="case-highlights__visual-image case-highlights__visual-image--wide" />
+                </div>
+              </div>
+            </article>
+            <div class="twocol twocol--wide">
+              <h3 class="twocol__heading">iOS application</h3>
+              <div class="twocol__main">
+                <p>
+                  I also closely worked with an iOS developer to translate the webapp to an iOS application. I audited features, mapped flows to native patterns (such as bottom tab bar and gestures), built mobile-optimized components, and provided Figma annotations. 
+                </p>
+              </div>
+            </div>
+            <!-- 🦊End new card -->
           </div>
       </section>
       
