Cange text in the Home page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<p class="hero__greeting">Hi! I’m Michelle.</p>
 			<h1 class="hero__title">A Product Designer<br />& accessibility advocate.</h1>
 			<p class="hero__description">
-				With experience across B2C, B2B, and SaaS projects and a visual media background, I bring a thoughtful approach based in equal mix of creativity and research and a can-do go-getter positive attitude.
+				With experience across B2C, B2B, and SaaS projects and a visual media background, I bring a thoughtful approach based in equal mix of creativity and research and a can-do positive attitude.
 			</p>
 	
 			<div class="hero__info">
@@ -113,7 +113,7 @@
 
 <section id="selected-work" class="selected-work">
   <div class="container">
-    <h2 class="selected-work__title">Selected Work</h2>
+    <h2 class="selected-work__title">Selected work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
         <a href="/case1/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
