Change text in case1

--- a/case1/index.html
+++ b/case1/index.html
@@ -229,6 +229,13 @@
                 </ul>
               </dd>
             </div>
+            <div class="case-context__item">
+              <dt class="case-context__term">Key impact</dt>
+              <dd class="case-context__desc">
+                This digital ER triage tool helped improve intake accuracy by 92%, reduced manual screening load for nurses, and made the hospital’s emergency check-in process faster and easier for families.</br></br> Since it’s been designed to scale, it’s now being explored for use in multiple locations.
+              </dd>
+            </div>
+
           </dl>
         </div>
       </section>
