Change text in case2

--- a/case2/index.html
+++ b/case2/index.html
@@ -221,6 +221,13 @@
                 </ul>
               </dd>
             </div>
+            <div class="case-context__item">
+              <dt class="case-context__term">Key impact</dt>
+              <dd class="case-context__desc">
+                This redesign simplified navigation, clarified content access, and streamlined onboarding, which helped seniors engage more confidently with their recommended health programs and resources. </br></br>The new experience supports caregivers and multiple user types, making the app feel more intuitive even for users that were less familiar with technology.
+              </dd>
+            </div>
+
           </dl>
         </div>
       </section>
