Update the page navigation

--- a/case2/index.html
+++ b/case2/index.html
@@ -83,6 +83,7 @@
           <li><a href="#nav-solution">Solution</a></li>
           <li><a href="#nav-design">Design</a></li>
           <li><a href="#nav-impact">Impact</a></li>
+          <li><a href="#nav-learnings">Learnings</a></li>
         </ul>
       </nav>
     </aside>
@@ -122,10 +123,17 @@
                     <span class="jump-menu__arrow-bg"><img src="../assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
-                <li>
+                 <li>
                   <a href="#nav-impact" class="jump-menu__link">
                     <span class="jump-menu__icon-bg"><img src="../assets/icons/outcomes.svg" alt="" width="38" height="38" /></span>
-                    <span class="jump-menu__label">Outcomes</span>
+                    <span class="jump-menu__label">Impact</span>
+                    <span class="jump-menu__arrow-bg"><img src="../assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#nav-learnings" class="jump-menu__link">
+                    <span class="jump-menu__icon-bg"><img src="../assets/icons/apple.svg" alt="" width="38" height="38" /></span>
+                    <span class="jump-menu__label">Learnings</span>
                     <span class="jump-menu__arrow-bg"><img src="../assets/icons/arrow-right.svg" alt="" width="16" height="16" /></span>
                   </a>
                 </li>
@@ -211,7 +219,7 @@
             <div class="case-context__item">
               <dt class="case-context__term">Key contributions</dt>
               <dd class="case-context__desc">
-                <p>During this project, I</p>
+                <p>During this project, I:</p>
                 <ul class="case-context__list">
                   <li>Led the redesign of the Resource Library and multi-profile navigation across web and mobile</li>
                   <li>Collaborated closely with fellow designers to align on patterns, share feedback, and ensure consistency across the platform; facilitated regular design critiques and working sessions to align with peers and strengthen design decisions across teams</li>
@@ -696,16 +704,17 @@
 
       <!-- What does it all come down to?-->
       <a id="nav-impact"></a>
+      <!-- 🦊 -->
         <section class="case-context" aria-labelledby="case-context-title">
           <div class="container case-context__content">
             <h2 id="case-context-title" class="case-context__heading">
-              What does it all come down to?
+              Project impact
             </h2>
             <dl class="case-context__items">
               <div class="case-context__item">
-                <dt class="case-context__term">Impact</dt>
+                <dt class="case-context__term">Increased user<br> confidence </dt>
                 <dd class="case-context__desc">
-                  <p>Improvements we were planning:</p>
+                  <p>Through simpler hierarchy, consistent labeling, and friendlier language, the redesign helped seniors understand where they were in the app and why certain content was relevant to them.</p>
                   <ul class="case-context__list">
                     <li>In internal tests, task completion rates rose from <strong>60% to 90%</strong></li>
                     <li>Users reported a reduction in cognitive load, saying the layout <strong>“made more sense”</strong> and was more visually appealing and <strong>“fun”</strong> and “it used to be <strong>sterile, like a hospital, but not anymore”</strong></li>
@@ -714,6 +723,30 @@
                   </ul>
                 </dd>
               </div>
+              <div class="case-context__item">
+                <dt class="case-context__term">Designed for caregivers</dt>
+                <dd class="case-context__desc">
+                  <p>Some users were caregivers supporting loved ones. I designed the multi-profile system to allow quick profile switching, program enrollment per profile, and ownership transfer if a patient takes over their own care. This brought the app closer to how care is actually delivered in many households.</p>
+                </dd> 
+              </div>
+              
+              <div class="case-context__item">
+                <dt class="case-context__term">Modular scalable design</dt>
+                <dd class="case-context__desc case-context__desc-last">
+                  <p>The system now supports multiple programs and content types without needing bespoke components. This sets the foundation for future updates and personalization which makes it easier to scale the app across programs or demographics.</p>
+                </dd>
+              </div>
+            </dl>
+          </div>
+        </section>
+      <!-- 🦊end -->
+       <a id="nav-learnings"></a>
+        <section class="case-context" aria-labelledby="case-context-title">
+          <div class="container case-context__content">
+            <h2 id="case-context-title" class="case-context__heading">
+              What does it all come down to?
+            </h2>
+            <dl class="case-context__items">
               <div class="case-context__item">
                 <dt class="case-context__term">If continued…</dt>
                 <dd class="case-context__desc">
