add buttons Next and Previous

--- a/case1/index.html
+++ b/case1/index.html
@@ -672,7 +672,7 @@
       <a id="nav-impact"></a>
       <!-- 🦊 -->
        <section class="case-howmightwe">
-        <h2 class="case-highlights__title case-highlights__title-no-top-margin">Why did this matter? Project impact.</h2>
+        <h2 class="case-highlights__title case-highlights__title-no-top-margin">Project impact</h2>
 
         <!-- Development collaboration -->
         <div class="container">
@@ -807,6 +807,16 @@
         </div>
       
       </section>
+      <!-- 🦊 next-prev buttons-->
+       <nav class="case-nav">
+        <div class="container">
+          <a href="/case2/" class="case-nav__btn case-nav__btn--next">
+            Next case →
+          </a>
+        </div>
+      </nav>
+
+      <!-- 🦊end  -->
     </main>
   
 
