--- a/case2/index.html
+++ b/case2/index.html
@@ -797,6 +797,19 @@
             </dl>
           </div>
         </section>
+        <!-- 🦊prev/next buttons -->
+         <nav class="case-nav">
+          <div class="container">
+            <a href="/case1/" class="case-nav__btn case-nav__btn--prev">
+              ← Previous case
+            </a>
+            <!-- keep Next hidden until case3 exists -->
+            <a href="#" class="case-nav__btn case-nav__btn--next case-nav__btn--hidden" aria-hidden="true">
+              Next case →
+            </a>
+          </div>
+        </nav>
+        <!-- 🦊end of prev/next buttons -->
     </main>
   
 
