Change the text in the Home page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<p class="hero__greeting">Hi! I’m Michelle.</p>
 			<h1 class="hero__title">A Product Designer<br />& accessibility advocate.</h1>
 			<p class="hero__description">
-				With experience across B2C, B2B, and SaaS projects and a visual media background, I bring a thoughtful approach based in equal mix of creativity and research and a can-do positive attitude.
+				With experience across B2C, B2B, and SaaS projects and a visual media background, I design digital products that feel human, intuitive, and simple, even when the problems aren’t.
 			</p>
 	
 			<div class="hero__info">
