Change the url for case1 and case2 pages

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -800,7 +800,7 @@
         <!-- 🦊prev/next buttons -->
          <nav class="case-nav">
           <div class="container">
-            <a href="/case1/" class="case-nav__btn case-nav__btn--prev">
+            <a href="/horizon-children-hospital/" class="case-nav__btn case-nav__btn--prev">
               ← Previous case
             </a>
             <!-- keep Next hidden until case3 exists -->
