--- a/horizon-children-hospital/index.html
+++ b/horizon-children-hospital/index.html
@@ -588,7 +588,7 @@
             <!-- Fourth sub-block -->
             <article class="case-highlights__item">
               
-             <!-- 🦊Creating a version for case2 -->
+             <!-- 🦊Creating a version for everwell-senior-solution -->
              <div class="case-highlights__item">
 
               <div class="case-highlights__visual">
@@ -624,7 +624,7 @@
                 </div>
               </div>
             </div>
-            <!-- 👍 End creating a version for case2 -->
+            <!-- 👍 End creating a version for everwell-senior-solution -->
               <div class="twocol twocol--wide twocol--wide-mg40">
                 <h3 class="twocol__heading">Getting results</h3>
                 <div class="twocol__main">
@@ -810,7 +810,7 @@
       <!-- 🦊 next-prev buttons-->
        <nav class="case-nav">
         <div class="container">
-          <a href="/case2/" class="case-nav__btn case-nav__btn--next">
+          <a href="/everwell-senior-solution/" class="case-nav__btn case-nav__btn--next">
             Next case →
           </a>
         </div>
