--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h2 class="selected-work__title">Selected work</h2>
     <div class="selected-work__cards">
       <article class="work-card " aria-labelledby="work1-title" role="article">
-        <a href="/case1/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
+        <a href="/horizon-children-hospital/" class="work-card__link" aria-label="Read more about Horizon Children's Hospital case study: Streamlining pediatric ER triage"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
         </span>
@@ -139,7 +139,7 @@
       </article>
 
 			<article class="work-card work-card--blue" aria-labelledby="work2-title" role="article">
-        <a href="/case2/" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
+        <a href="/everwell-senior-solution/" class="work-card__link" aria-label="Read more about Everwell case study: Redesigning a seniors' health"></a>
         <span class="work-card__icon-abs" aria-hidden="true">
           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
         </span>
