Fix the two column problem in the case2 in 1080px

--- a/everwell-senior-solution/index.html
+++ b/everwell-senior-solution/index.html
@@ -706,13 +706,13 @@
       <a id="nav-impact"></a>
       <!-- 🦊 -->
         <section class="case-context" aria-labelledby="case-context-title">
-          <div class="container case-context__content">
+          <div class="container case-context__content case-context__content-no-gap">
             <h2 id="case-context-title" class="case-context__heading">
               Project impact
             </h2>
             <dl class="case-context__items">
               <div class="case-context__item">
-                <dt class="case-context__term">Increased user<br> confidence </dt>
+                <dt class="case-context__term add-small-margin-bottom">Increased user<br> confidence </dt>
                 <dd class="case-context__desc">
                   <p>Through simpler hierarchy, consistent labeling, and friendlier language, the redesign helped seniors understand where they were in the app and why certain content was relevant to them.</p>
                   <ul class="case-context__list">
@@ -724,14 +724,14 @@
                 </dd>
               </div>
               <div class="case-context__item">
-                <dt class="case-context__term">Designed for caregivers</dt>
+                <dt class="case-context__term add-small-margin-bottom">Designed for caregivers</dt>
                 <dd class="case-context__desc">
                   <p>Some users were caregivers supporting loved ones. I designed the multi-profile system to allow quick profile switching, program enrollment per profile, and ownership transfer if a patient takes over their own care. This brought the app closer to how care is actually delivered in many households.</p>
                 </dd> 
               </div>
               
               <div class="case-context__item">
-                <dt class="case-context__term">Modular scalable design</dt>
+                <dt class="case-context__term add-small-margin-bottom">Modular scalable design</dt>
                 <dd class="case-context__desc case-context__desc-last">
                   <p>The system now supports multiple programs and content types without needing bespoke components. This sets the foundation for future updates and personalization which makes it easier to scale the app across programs or demographics.</p>
                 </dd>
@@ -742,13 +742,13 @@
       <!-- 🦊end -->
        <a id="nav-learnings"></a>
         <section class="case-context" aria-labelledby="case-context-title">
-          <div class="container case-context__content">
+          <div class="container case-context__content case-context__content-no-gap">
             <h2 id="case-context-title" class="case-context__heading">
               What does it all come down to?
             </h2>
             <dl class="case-context__items">
               <div class="case-context__item">
-                <dt class="case-context__term">If continued…</dt>
+                <dt class="case-context__term add-small-margin-bottom">If continued…</dt>
                 <dd class="case-context__desc">
                   <p>While the redesign had not launched at the time I exited the company, early indicators were promising:</p>
                   <ul class="case-context__list">
@@ -787,7 +787,7 @@
               </div>
               
               <div class="case-context__item">
-                <dt class="case-context__term">Learnings</dt>
+                <dt class="case-context__term add-small-margin-bottom">Learnings</dt>
                 <dd class="case-context__desc case-context__desc-last">
                   <p><strong>Designing for older adults requires more than just larger text and higher contrast</strong></br>Through this project, I gained a deeper appreciation for how essential simplicity is in shaping the user experience. Especially for seniors who may feel uncertain using digital tools and hesitant to press a button. Watching users navigate the original product emphasized how important it is for the design to meet the users where they are at.</p>
                   <p><strong>"Good enough" infrastructure can block great UX</strong></br>Some of our biggest design challenges weren’t visual: they stemmed from inherited systems that made it hard to prioritize or notify users effectively. UX is so much more than just drawing some screens. In this case, it was also about advocating for front- and back-end improvements.</p>
